# devops-capstone-project

./: .gitignore  README.md  deployment.yaml  pipeline.yaml  pipelinerun.yaml  requirements.txt  run.py  service.yaml  setup.cfg  task.yaml
service/: __init__.py  models.py  routes.py
tests/: test_routes.py
