[metadata]
name = accounts
version = 1.0.0
description = Customer Accounts Microservice


[tool:pytest]
testpaths = tests


[nosetests]
with-coverage = true
cover-package = service
cover-tests = true
verbosity = 2


[coverage:run]
branch = True
source = service


[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover


[flake8]
max-line-length = 100
exclude =
    .git,
    venv


[pylint]
disable =
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring